Projeto atualizado com style.css, index.html e responsividade

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocket Travel</title>
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-svg" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -247,6 +248,47 @@
           </clipPath>
         </defs>
       </svg>
+
+      <h1>O seu próximo <span>destino</span> pode estar aqui...</h1>
+      <p>
+        Aqui você encontra uma seleção de <span>pacotes completos</span> para as
+        suas férias!
+      </p>
+      <br />
+      <p>
+        Na Flutuar você encontra pacotes de viagens nacionais e internacionais
+        que incluem: passagens aéreas, hotéis, café da manhã, e até seguro
+        viagem com <span>preços arrasadores</span>!
+      </p>
+      <br />
+      <br />
+      <p>
+        Se você ainda não tem um destino definido, confira nossa seção de
+        ofertas.
+      </p>
     </main>
+
+    <footer>
+      <ul>
+        <li><a href="">Destinos</a></li>
+        <li><a href="">Ofertas</a></li>
+        <li><a href="">Contato</a></li>
+      </ul>
+
+      <svg
+        width="auto"
+        height="104"
+        viewBox="0 0 auto auto"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M1800 0L1725 13.4815C1650 26.963 1500 53.9259 1350 55.8519C1200 57.7778 1050 34.6667 900 23.1111C750 11.5556 600 11.5556 450 15.4074C300 19.2593 150 26.963 74.9999 30.8148L0 34.6667V104H74.9999C150 104 300 104 450 104C600 104 750 104 900 104C1050 104 1200 104 1350 104C1500 104 1650 104 1725 104H1800V0Z"
+          fill="#3F3D56"
+        />
+      </svg>
+    </footer>
   </body>
 </html>
